# browser-copilot

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  browser_agent.py  generate_proto.sh  jaeger.sh  justfile  log_config.py  mise.toml  pydantic_mcp.py  pyproject.toml  telegram-bot.py  telegram_bot.py
agents/: __init__.py  base_agent.py  browser_interaction_agent.py  conversation_agent.py  model_config.py  page_analysis_agent.py
chat-client/: README.md  app.py  model_config.py
proto/: __init__.py  browser_copilot.proto  browser_copilot_pb2.py  browser_copilot_pb2_grpc.py
src/: base_agent.py  browser_agent.py  browser_interaction_agent.py  conversation_agent.py  grpc_message_sender.py  grpc_server.py  input_utils.py  log_config.py  main.py  model_config.py  node_utils.py  page_analysis_agent.py  pydantic_mcp.py  rest_server.py  sse_message_sender.py  telegram_bot.py  telegram_message_sender.py
src/agents/: base_agent.py  browser_interaction_agent.py  conversation_agent.py  page_analysis_agent.py
src/browser_copilot/: __init__.py
src/browser_copilot/agents/: __init__.py  base.py  browser_interaction.py  conversation.py  page_analysis.py
src/browser_copilot/api/: __init__.py  server.py  sse.py
src/browser_copilot/config/: __init__.py  logging.py  models.py  providers.py
src/browser_copilot/utils/: __init__.py  input.py  nodes.py
src/chat-client/: .gitignore  README.md
src/config/: __init__.py
src/dev/: console_chatbot.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py
