[project]
name = "browser-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "logfire>=3.21.1",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "pydantic-ai>=0.7.6",
    "python-telegram-bot>=22.1",
]

[project.scripts]
telegram = "src.telegram_bot:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100
