[project]
name = "browser-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.104.0",
    "logfire>=3.21.1",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.7.6",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
rest-server = "src.rest_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false

# Suppress import-untyped warnings for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "sseclient",
    "uvicorn.*",
]
ignore_missing_imports = true
ignore_errors = true
