[project]
name = "browser-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.104.0",
    "logfire>=3.21.1",
    "mcp[cli]>=1.9.4",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.7.6",
    "requests>=2.31.0",
    "sseclient-py>=1.8.0",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
rest-server = "browser_copilot.api.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["browser_copilot*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pre-commit>=4.2.0",
    "pytest>=9.0.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]  # Enable isort rules for import sorting

[tool.ruff.lint.isort]
known-first-party = ["browser_copilot"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "src/chat-client"
]
